# easydiet

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  app.py  middleware.py  pyproject.toml  requirements.txt  test.py  test_auth.py  test_food.py  test_user.py
backend/server/api/core/: config.py  validation_middleware.py
backend/server/api/db/: database.py
backend/server/api/endpoints/: __init__.py  auth.py  auth_endpoints.py  diet_endpoints.py  food.py  food_endpoints.py  recipe_endpoints.py  testeapi.py  user.py  users_endpoints.py
backend/server/api/external_api/: __init__.py  fatsecret.py
backend/server/api/models/: user.py
backend/server/api/services/: auth.py
backend/server/core/: config.py  error_handlers.py  security.py  validation_middleware.py
backend/server/db/: database.py
backend/server/hateoas/: __init__.py  user_hateoas.py
backend/server/models/: __init__.py  user.py  users_model.py
backend/server/schemas/: __init__.py  auth.py  auth_schemas.py  diet.py  diet_schemas.py  food_schemas.py  recipe_schemas.py  user.py  users_schemas.py
backend/server/services/: __init__.py  auth.py  auth_service.py  diet.py  diet_service.py  food_service.py  recipe.py  recipe_service.py  user.py  users_service.py
backend/server/utils/: auth.py  auth_utils.py  bson_utils.py  json_encoder.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  robots.txt  sw.js
frontend/src/app/: globals.css  layout.js  sitemap.ts
frontend/src/hooks/: useApi.js
(+20 files in other folders)
